Added some more interesting content
Wrote some more things

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <p>Hello world!</p>
         <p>Yiran Cai-Add something here...</p>
+        <p>Tom craw added something here.</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     </body>
 </html>
